# golden-thread-framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_CHECKLIST.md  coverage.json  pyproject.toml  run_tests.sh
docs/: golden-thread-check.yml
docs/diagrams/: golden-thread-diagrams.md
docs/guides/: golden-thread-framework.md  golden-thread-quick-reference.md
docs/templates/: PULL_REQUEST_TEMPLATE.md
examples/: .golden-thread.config.yaml  .golden-thread.yaml
src/golden_thread/: __init__.py  cli.py  config.py  manifest.py
src/golden_thread/notion/: __init__.py  client.py  registry.py
src/golden_thread/parsers/: __init__.py  base.py  go_parser.py  python_parser.py  typescript_parser.py
src/golden_thread/reports/: __init__.py  json.py
src/golden_thread/validators/: __init__.py  consistency.py  coverage.py  orphans.py
tests/: __init__.py  test_config.py  test_manifest.py  test_notion.py  test_validators.py
tests/test_parsers/: test_python_parser.py
